--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-sponsorblock~=0.1.3
+sponsorblock.py~=0.2.3
 feedparser~=6.0.10
 moviepy~=1.0.3
-yt-dlp~=2024.8.1
+yt-dlp~=2024.10.7
 python-dotenv~=1.0.1
