--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   myapp:
-    build: .
+    image: simoneklundh/autotubedownloader
     container_name: autotubeDownloader
     volumes:
       - ./config:/config  # Bind mount your local directory
